Fixed bug where overlap score popup not opening for some tracts

--- a/megatrack/static/css/core/lesion-mapping.css
+++ b/megatrack/static/css/core/lesion-mapping.css
@@ -291,7 +291,7 @@
     text-align: left;
 }
 
-#overlap-score-help {
+.overlap-score-help {
     float: left;
     margin-left: 5px;
     margin-top: 3px;
